--- a/urbanstory/pages/components/avatar.html
+++ b/urbanstory/pages/components/avatar.html
@@ -16,14 +16,14 @@
 		<div class="avatar">
 			<span>RN</span>
 		</div>
-		<section class="code-preview">
+		<section class="code-preview has-tab">
 			<div class="card uh-tab">
 				<nav class="uh-tab-nav">
 					<a  class="nav-item nav-fit-content active" href="#html-1" id="html-tab">HTML</a>
 					<a  class="nav-item nav-fit-content" href="#sass-1" id="sass-tab">SASS</a>
 				</nav>
 			</div>
-			<pre class="code-snippet display-on" id="html-1"><code>&lt;div class=&quot;avatar&quot;&gt;
+			<pre class="code-snippet" id="html-1"><code>&lt;div class=&quot;avatar&quot;&gt;
   &lt;img src=&quot;https://randomuser.me/api/portraits/women/17.jpg&quot;&gt;
 &lt;/div&gt;
 
@@ -34,7 +34,7 @@
 &lt;div class=&quot;avatar&quot;&gt;
   &lt;span&gt;RN&lt;/span&gt;
 &lt;/div&gt;</code></pre>
-			<pre class="code-snippet" id="sass-1"><code>
+			<pre class="code-snippet display-off" id="sass-1"><code>
 .avatar {
 	width: 32px;
 	height: 32px;
@@ -85,14 +85,14 @@
 		<div class="avatar is-sm">
 			<span>RN</span>
 		</div>
-		<section class="code-preview">
+		<section class="code-preview has-tab">
 			<div class="card uh-tab">
 				<nav class="uh-tab-nav">
 					<a  class="nav-item nav-fit-content active" href="#html-2" id="html-tab">HTML</a>
 					<a  class="nav-item nav-fit-content" href="#sass-2" id="sass-tab">SASS</a>
 				</nav>
 			</div>
-			<pre class="code-snippet display-on" id="html-2"><code>&lt;div class=&quot;avatar is-sm&quot;&gt;
+			<pre class="code-snippet" id="html-2"><code>&lt;div class=&quot;avatar is-sm&quot;&gt;
   &lt;img src=&quot;https://randomuser.me/api/portraits/women/17.jpg&quot;&gt;
 &lt;/div&gt;
 
@@ -103,7 +103,7 @@
 &lt;div class=&quot;avatar is-sm&quot;&gt;
   &lt;span&gt;RN&lt;/span&gt;
 &lt;/div&gt;</code></pre>
-			<pre class="code-snippet" id="sass-2"><code>
+			<pre class="code-snippet display-off" id="sass-2"><code>
 .avatar {
 	width: 32px;
 	height: 32px;
@@ -161,14 +161,14 @@
 		<div class="avatar is-md">
 			<span>RN</span>
 		</div>
-		<section class="code-preview">
+		<section class="code-preview has-tab">
 			<div class="card uh-tab">
 				<nav class="uh-tab-nav">
 					<a  class="nav-item nav-fit-content active" href="#html-3" id="html-tab">HTML</a>
 					<a  class="nav-item nav-fit-content" href="#sass-3" id="sass-tab">SASS</a>
 				</nav>
 			</div>
-			<pre class="code-snippet display-on" id="html-3"><code>&lt;div class=&quot;avatar is-md&quot;&gt;
+			<pre class="code-snippet" id="html-3"><code>&lt;div class=&quot;avatar is-md&quot;&gt;
   &lt;img src=&quot;https://randomuser.me/api/portraits/women/17.jpg&quot;&gt;
 &lt;/div&gt;
 
@@ -179,7 +179,7 @@
 &lt;div class=&quot;avatar is-md&quot;&gt;
   &lt;span&gt;RN&lt;/span&gt;
 &lt;/div&gt;</code></pre>
-			<pre class="code-snippet" id="sass-3"><code>
+			<pre class="code-snippet display-off" id="sass-3"><code>
 .avatar {
 	width: 32px;
 	height: 32px;
@@ -238,14 +238,14 @@
 		<div class="avatar is-lg">
 			<span>RN</span>
 		</div>
-		<section class="code-preview">
+		<section class="code-preview has-tab">
 			<div class="card uh-tab">
 				<nav class="uh-tab-nav">
 					<a  class="nav-item nav-fit-content active" href="#html-4" id="html-tab">HTML</a>
 					<a  class="nav-item nav-fit-content" href="#sass-4" id="sass-tab">SASS</a>
 				</nav>
 			</div>
-			<pre class="code-snippet display-on" id="html-4"><code>&lt;div class=&quot;avatar is-lg&quot;&gt;
+			<pre class="code-snippet" id="html-4"><code>&lt;div class=&quot;avatar is-lg&quot;&gt;
   &lt;img src=&quot;https://randomuser.me/api/portraits/women/17.jpg&quot;&gt;
 &lt;/div&gt;
 
@@ -256,7 +256,7 @@
 &lt;div class=&quot;avatar is-lg&quot;&gt;
   &lt;span&gt;RN&lt;/span&gt;
 &lt;/div&gt;</code></pre>
-			<pre class="code-snippet" id="sass-4"><code>
+			<pre class="code-snippet display-off" id="sass-4"><code>
 .avatar {
 	width: 32px;
 	height: 32px;
@@ -313,14 +313,14 @@
 		<div class="avatar is-xl">
 			<span>RN</span>
 		</div>
-		<section class="code-preview">
+		<section class="code-preview has-tab">
 			<div class="card uh-tab">
 				<nav class="uh-tab-nav">
 					<a  class="nav-item nav-fit-content active" href="#html-5" id="html-tab">HTML</a>
 					<a  class="nav-item nav-fit-content" href="#sass-5" id="sass-tab">SASS</a>
 				</nav>
 			</div>
-			<pre class="code-snippet display-on" id="html-5"><code>&lt;div class=&quot;avatar is-xl&quot;&gt;
+			<pre class="code-snippet" id="html-5"><code>&lt;div class=&quot;avatar is-xl&quot;&gt;
   &lt;img src=&quot;https://randomuser.me/api/portraits/men/11.jpg&quot;&gt;
 &lt;/div&gt;
 
@@ -331,7 +331,7 @@
 &lt;div class=&quot;avatar is-xl&quot;&gt;
   &lt;span&gt;RN&lt;/span&gt;
 &lt;/div&gt;</code></pre>
-			<pre class="code-snippet" id="sass-5"><code>
+			<pre class="code-snippet display-off" id="sass-5"><code>
 .avatar {
 	width: 32px;
 	height: 32px;
@@ -396,14 +396,14 @@
 				<img src="https://randomuser.me/api/portraits/men/15.jpg">
 			</div>
 		</div>
-		<section class="code-preview">
+		<section class="code-preview has-tab">
 			<div class="card uh-tab">
 				<nav class="uh-tab-nav">
 					<a  class="nav-item nav-fit-content active" href="#html-6" id="html-tab">HTML</a>
 					<a  class="nav-item nav-fit-content" href="#sass-6" id="sass-tab">SASS</a>
 				</nav>
 			</div>
-			<pre class="code-snippet display-on" id="html-6"><code>&lt;div class=&quot;avatar-group&quot;&gt;
+			<pre class="code-snippet" id="html-6"><code>&lt;div class=&quot;avatar-group&quot;&gt;
   &lt;div class=&quot;avatar&quot;&gt;
 	&lt;img src=&quot;https://randomuser.me/api/portraits/men/11.jpg&quot;&gt;
   &lt;/div&gt;
@@ -420,7 +420,7 @@
 	&lt;img src=&quot;https://randomuser.me/api/portraits/men/15.jpg&quot;&gt;
   &lt;/div&gt;
 &lt;/div&gt;</code></pre>
-			<pre class="code-snippet" id="sass-6"><code>
+			<pre class="code-snippet display-off" id="sass-6"><code>
 .avatar {
 	width: 32px;
 	height: 32px;
@@ -491,14 +491,14 @@
 				<img src="https://randomuser.me/api/portraits/men/15.jpg">
 			</div>
 		</div>
-		<section class="code-preview">
+		<section class="code-preview has-tab">
 			<div class="card uh-tab">
 				<nav class="uh-tab-nav">
 					<a  class="nav-item nav-fit-content active" href="#html-7" id="html-tab">HTML</a>
 					<a  class="nav-item nav-fit-content" href="#sass-7" id="sass-tab">SASS</a>
 				</nav>
 			</div>
-			<pre class="code-snippet display-on" id="html-7"><code>&lt;div class=&quot;avatar-group&quot;&gt;
+			<pre class="code-snippet" id="html-7"><code>&lt;div class=&quot;avatar-group&quot;&gt;
   &lt;div class=&quot;avatar is-sm&quot;&gt;
 	&lt;img src=&quot;https://randomuser.me/api/portraits/men/11.jpg&quot;&gt;
   &lt;/div&gt;
@@ -515,7 +515,7 @@
 	&lt;img src=&quot;https://randomuser.me/api/portraits/men/15.jpg&quot;&gt;
   &lt;/div&gt;
 &lt;/div&gt;</code></pre>
-			<pre class="code-snippet" id="sass-7"><code>
+			<pre class="code-snippet display-off" id="sass-7"><code>
 .avatar {
 	width: 32px;
 	height: 32px;
@@ -586,20 +586,20 @@
 		<div class="avatar is-o">
 			<img src="https://randomuser.me/api/portraits/men/11.jpg">
 		</div>
-		<section class="code-preview">
+		<section class="code-preview has-tab">
 			<div class="card uh-tab">
 				<nav class="uh-tab-nav">
 					<a  class="nav-item nav-fit-content active" href="#html-8" id="html-tab">HTML</a>
 					<a  class="nav-item nav-fit-content" href="#sass-8" id="sass-tab">SASS</a>
 				</nav>
 			</div>
-			<pre class="code-snippet display-on" id="html-8"><code>&lt;div class=&quot;avatar is-square&quot;&gt;
+			<pre class="code-snippet" id="html-8"><code>&lt;div class=&quot;avatar is-square&quot;&gt;
   &lt;img src=&quot;https://randomuser.me/api/portraits/men/11.jpg&quot;&gt;
 &lt;/div&gt;
 &lt;div class=&quot;avatar is-o&quot;&gt;
   &lt;img src=&quot;https://randomuser.me/api/portraits/men/11.jpg&quot;&gt;
 &lt;/div&gt;</code></pre>
-			<pre class="code-snippet" id="sass-8"><code>
+			<pre class="code-snippet display-off" id="sass-8"><code>
 .avatar {
 	width: 32px;
 	height: 32px;
