--- a/urbanstory/pages/components/breadcrumbs.html
+++ b/urbanstory/pages/components/breadcrumbs.html
@@ -8,19 +8,19 @@
             <a href="#">Page</a>
             <a href="#" class="active">Sub Page</a>
         </nav>
-        <section class="code-preview">
+        <section class="code-preview has-tab">
 			<div class="card uh-tab">
 				<nav class="uh-tab-nav">
 					<a  class="nav-item nav-fit-content active" href="#html-1" id="html-tab">HTML</a>
 					<a  class="nav-item nav-fit-content" href="#sass-1" id="sass-tab">SASS</a>
 				</nav>
 			</div>
-            <pre class="code-snippet display-on" id="html-1"><code>&lt;nav class=&quot;breadcrumb&quot;&gt;
+            <pre class="code-snippet" id="html-1"><code>&lt;nav class=&quot;breadcrumb&quot;&gt;
     &lt;a href=&quot;#&quot;&gt;Home&lt;/a&gt;
     &lt;a href=&quot;#&quot;&gt;Page&lt;/a&gt;
     &lt;a href=&quot;#&quot; class=&quot;active&quot;&gt;Sub Page&lt;/a&gt;
 &lt;/nav&gt;</code></pre>
-            <pre class="code-snippet" id="sass-1"><code>
+            <pre class="code-snippet display-off" id="sass-1"><code>
 .breadcrumb {
     a {
         height: $br-height;
