--- a/urbanstory/pages/components/button.html
+++ b/urbanstory/pages/components/button.html
@@ -106,17 +106,17 @@
 		<button class="btn btn-large">Button Large</button>
 		<button class="btn">Button Default</button>
 		<button class="btn btn-small">Button Small</button>
-		<section class="code-preview">
+		<section class="code-preview has-tab">
 			<div class="card uh-tab">
 				<nav class="uh-tab-nav">
 					<a  class="nav-item nav-fit-content active" href="#html-1" id="html-tab">HTML</a>
 					<a  class="nav-item nav-fit-content" href="#sass-1" id="sass-tab">SASS</a>
 				</nav>
 			</div>
-			<pre class="code-snippet display-on" id="html-1"><code>&lt;button class=&quot;btn btn-large&quot;&gt;Button Large&lt;/button&gt;
+			<pre class="code-snippet" id="html-1"><code>&lt;button class=&quot;btn btn-large&quot;&gt;Button Large&lt;/button&gt;
 &lt;button class=&quot;btn&quot;&gt;Button Default&lt;/button&gt;
 &lt;button class=&quot;btn btn-small&quot;&gt;Button Small&lt;/button&gt;</code></pre>
-			<pre class="code-snippet" id="sass-1"><code>
+			<pre class="code-snippet display-off" id="sass-1"><code>
 .btn {
 	background-color: $c-grey-1;
 	font-size: $font-s;
@@ -165,17 +165,17 @@
 		<button class="btn btn-firm btn-large">Button Large</button>
 		<button class="btn btn-firm">Button Default</button>
 		<button class="btn btn-firm btn-small">Button Small</button>
-		<section class="code-preview">
+		<section class="code-preview has-tab">
 			<div class="card uh-tab">
 				<nav class="uh-tab-nav">
 					<a  class="nav-item nav-fit-content active" href="#html-2" id="html-tab">HTML</a>
 					<a  class="nav-item nav-fit-content" href="#sass-2" id="sass-tab">SASS</a>
 				</nav>
 			</div>
-			<pre class="code-snippet display-on" id="html-2"><code>&lt;button class=&quot;btn btn-firm btn-large&quot;&gt;Button Large&lt;/button&gt;
+			<pre class="code-snippet" id="html-2"><code>&lt;button class=&quot;btn btn-firm btn-large&quot;&gt;Button Large&lt;/button&gt;
 &lt;button class=&quot;btn btn-firm&quot;&gt;Button Default&lt;/button&gt;
 &lt;button class=&quot;btn btn-firm btn-small&quot;&gt;Button Small&lt;/button&gt;</code></pre>
-			<pre class="code-snippet" id="sass-2"><code>
+			<pre class="code-snippet display-off" id="sass-2"><code>
 .btn {
 	background-color: $c-grey-1;
 	font-size: $font-s;
@@ -236,17 +236,17 @@
 		<button class="btn btn-median btn-large">Button Large</button>
 		<button class="btn btn-median">Button Default</button>
 		<button class="btn btn-median btn-small">Button Small</button>
-		<section class="code-preview">
+		<section class="code-preview has-tab">
 			<div class="card uh-tab">
 				<nav class="uh-tab-nav">
 					<a  class="nav-item nav-fit-content active" href="#html-3" id="html-tab">HTML</a>
 					<a  class="nav-item nav-fit-content" href="#sass-3" id="sass-tab">SASS</a>
 				</nav>
 			</div>
-			<pre class="code-snippet display-on" id="html-3"><code>&lt;button class=&quot;btn btn-median btn-large&quot;&gt;Button Large&lt;/button&gt;
+			<pre class="code-snippet" id="html-3"><code>&lt;button class=&quot;btn btn-median btn-large&quot;&gt;Button Large&lt;/button&gt;
 &lt;button class=&quot;btn btn-median&quot;&gt;Button Default&lt;/button&gt;
 &lt;button class=&quot;btn btn-median btn-small&quot;&gt;Button Small&lt;/button&gt;</code></pre>
-			<pre class="code-snippet" id="sass-3"><code>
+			<pre class="code-snippet display-off" id="sass-3"><code>
 .btn {
 	background-color: $c-grey-1;
 	font-size: $font-s;
@@ -307,17 +307,17 @@
 		<button class="btn btn-prime btn-large">Button Large</button>
 		<button class="btn btn-prime">Button Default</button>
 		<button class="btn btn-prime btn-small">Button Small</button>
-		<section class="code-preview">
+		<section class="code-preview has-tab">
 			<div class="card uh-tab">
 				<nav class="uh-tab-nav">
 					<a  class="nav-item nav-fit-content active" href="#html-4" id="html-tab">HTML</a>
 					<a  class="nav-item nav-fit-content" href="#sass-4" id="sass-tab">SASS</a>
 				</nav>
 			</div>
-			<pre class="code-snippet display-on" id="html-4"><code>&lt;button class=&quot;btn btn-prime btn-large&quot;&gt;Button Large&lt;/button&gt;
+			<pre class="code-snippet" id="html-4"><code>&lt;button class=&quot;btn btn-prime btn-large&quot;&gt;Button Large&lt;/button&gt;
 &lt;button class=&quot;btn btn-prime&quot;&gt;Button Default&lt;/button&gt;
 &lt;button class=&quot;btn btn-prime btn-small&quot;&gt;Button Small&lt;/button&gt;</code></pre>
-			<pre class="code-snippet" id="sass-4"><code>
+			<pre class="code-snippet display-off" id="sass-4"><code>
 .btn {
 	background-color: $c-grey-1;
 	font-size: $font-s;
@@ -378,17 +378,17 @@
 		<button class="btn btn-success btn-large">Button Large</button>
 		<button class="btn btn-success">Button Default</button>
 		<button class="btn btn-success btn-small">Button Small</button>
-		<section class="code-preview">
+		<section class="code-preview has-tab">
 			<div class="card uh-tab">
 				<nav class="uh-tab-nav">
 					<a  class="nav-item nav-fit-content active" href="#html-5" id="html-tab">HTML</a>
 					<a  class="nav-item nav-fit-content" href="#sass-5" id="sass-tab">SASS</a>
 				</nav>
 			</div>
-			<pre class="code-snippet display-on" id="html-5" ><code>&lt;button class=&quot;btn btn-success btn-large&quot;&gt;Button Large&lt;/button&gt;
+			<pre class="code-snippet" id="html-5" ><code>&lt;button class=&quot;btn btn-success btn-large&quot;&gt;Button Large&lt;/button&gt;
 &lt;button class=&quot;btn btn-success&quot;&gt;Button Default&lt;/button&gt;
 &lt;button class=&quot;btn btn-success btn-small&quot;&gt;Button Small&lt;/button&gt;</code></pre>
-			<pre class="code-snippet" id="sass-5"><code>
+			<pre class="code-snippet display-off" id="sass-5"><code>
 .btn {
 	background-color: $c-grey-1;
 	font-size: $font-s;
@@ -450,17 +450,17 @@
 		<button class="btn btn-danger btn-large">Button Large</button>
 		<button class="btn btn-danger">Button Default</button>
 		<button class="btn btn-danger btn-small">Button Small</button>
-		<section class="code-preview">
+		<section class="code-preview has-tab">
 			<div class="card uh-tab">
 				<nav class="uh-tab-nav">
 					<a  class="nav-item nav-fit-content active" href="#html-6" id="html-tab">HTML</a>
 					<a  class="nav-item nav-fit-content" href="#sass-6" id="sass-tab">SASS</a>
 				</nav>
 			</div>
-			<pre class="code-snippet display-on" id="html-6"><code>&lt;button class=&quot;btn btn-danger btn-large&quot;&gt;Button Large&lt;/button&gt;
+			<pre class="code-snippet" id="html-6"><code>&lt;button class=&quot;btn btn-danger btn-large&quot;&gt;Button Large&lt;/button&gt;
 &lt;button class=&quot;btn btn-danger&quot;&gt;Button Default&lt;/button&gt;
 &lt;button class=&quot;btn btn-danger btn-small&quot;&gt;Button Small&lt;/button&gt;</code></pre>
-			<pre class="code-snippet" id="sass-6"><code>
+			<pre class="code-snippet display-off" id="sass-6"><code>
 .btn {
 	background-color: $c-grey-1;
 	font-size: $font-s;
@@ -521,17 +521,17 @@
 		<button class="btn btn-disabled btn-large">Button Large</button>
 		<button class="btn btn-disabled">Button Default</button>
 		<button class="btn btn-disabled btn-small">Button Small</button>
-		<section class="code-preview">
+		<section class="code-preview has-tab">
 			<div class="card uh-tab">
 				<nav class="uh-tab-nav">
 					<a  class="nav-item nav-fit-content active" href="#html-7" id="html-tab">HTML</a>
 					<a  class="nav-item nav-fit-content" href="#sass-7" id="sass-tab">SASS</a>
 				</nav>
 			</div>
-			<pre class="code-snippet display-on" id="html-7"><code>&lt;button class=&quot;btn btn-disabled btn-large&quot;&gt;Button Large&lt;/button&gt;
+			<pre class="code-snippet" id="html-7"><code>&lt;button class=&quot;btn btn-disabled btn-large&quot;&gt;Button Large&lt;/button&gt;
 &lt;button class=&quot;btn btn-disabled&quot;&gt;Button Default&lt;/button&gt;
 &lt;button class=&quot;btn btn-disabled btn-small&quot;&gt;Button Small&lt;/button&gt;</code></pre>
-			<pre class="code-snippet" id="sass-7"><code>
+			<pre class="code-snippet display-off" id="sass-7"><code>
 .btn {
 	background-color: $c-grey-1;
 	font-size: $font-s;
@@ -596,17 +596,17 @@
 		<button class="btn btn-flat-firm btn-large">Button Large</button>
 		<button class="btn btn-flat-firm">Button Default</button>
 		<button class="btn btn-flat-firm btn-small">Button Small</button>
-		<section class="code-preview">
+		<section class="code-preview has-tab">
 			<div class="card uh-tab">
 				<nav class="uh-tab-nav">
 					<a  class="nav-item nav-fit-content active" href="#html-8" id="html-tab">HTML</a>
 					<a  class="nav-item nav-fit-content" href="#sass-8" id="sass-tab">SASS</a>
 				</nav>
 			</div>
-			<pre class="code-snippet display-on" id="html-8"><code>&lt;button class=&quot;btn btn-flat-firm btn-large&quot;&gt;Button Large&lt;/button&gt;
+			<pre class="code-snippet" id="html-8"><code>&lt;button class=&quot;btn btn-flat-firm btn-large&quot;&gt;Button Large&lt;/button&gt;
 &lt;button class=&quot;btn btn-flat-firm&quot;&gt;Button Default&lt;/button&gt;
 &lt;button class=&quot;btn btn-flat-firm btn-small&quot;&gt;Button Small&lt;/button&gt;</code></pre>
-			<pre class="code-snippet" id="sass-8"><code>
+			<pre class="code-snippet display-off" id="sass-8"><code>
 .btn {
 	background-color: $c-grey-1;
 	font-size: $font-s;
@@ -667,17 +667,17 @@
 		<button class="btn btn-flat-median btn-large">Button Large</button>
 		<button class="btn btn-flat-median">Button Default</button>
 		<button class="btn btn-flat-median btn-small">Button Small</button>
-		<section class="code-preview">
+		<section class="code-preview has-tab">
 			<div class="card uh-tab">
 				<nav class="uh-tab-nav">
 					<a  class="nav-item nav-fit-content active" href="#html-9" id="html-tab">HTML</a>
 					<a  class="nav-item nav-fit-content" href="#sass-9" id="sass-tab">SASS</a>
 				</nav>
 			</div>
-			<pre class="code-snippet display-on" id="html-9"><code>&lt;button class=&quot;btn btn-flat-median btn-large&quot;&gt;Button Large&lt;/button&gt;
+			<pre class="code-snippet" id="html-9"><code>&lt;button class=&quot;btn btn-flat-median btn-large&quot;&gt;Button Large&lt;/button&gt;
 &lt;button class=&quot;btn btn-flat-median&quot;&gt;Button Default&lt;/button&gt;
 &lt;button class=&quot;btn btn-flat-median btn-small&quot;&gt;Button Small&lt;/button&gt;</code></pre>
-			<pre class="code-snippet" id="sass-9"><code>
+			<pre class="code-snippet display-off" id="sass-9"><code>
 .btn {
 	background-color: $c-grey-1;
 	font-size: $font-s;
@@ -738,17 +738,17 @@
 		<button class="btn btn-flat-success btn-large">Button Large</button>
 		<button class="btn btn-flat-success">Button Default</button>
 		<button class="btn btn-flat-success btn-small">Button Small</button>
-		<section class="code-preview">
+		<section class="code-preview has-tab">
 			<div class="card uh-tab">
 				<nav class="uh-tab-nav">
 					<a  class="nav-item nav-fit-content active" href="#html-10" id="html-tab">HTML</a>
 					<a  class="nav-item nav-fit-content" href="#sass-10" id="sass-tab">SASS</a>
 				</nav>
 			</div>
-			<pre class="code-snippet display-on" id="html-10"><code>&lt;button class=&quot;btn btn-flat-success btn-large&quot;&gt;Button Large&lt;/button&gt;
+			<pre class="code-snippet" id="html-10"><code>&lt;button class=&quot;btn btn-flat-success btn-large&quot;&gt;Button Large&lt;/button&gt;
 &lt;button class=&quot;btn btn-flat-success&quot;&gt;Button Default&lt;/button&gt;
 &lt;button class=&quot;btn btn-flat-success btn-small&quot;&gt;Button Small&lt;/button&gt;</code></pre>
-			<pre class="code-snippet" id="sass-10"><code>
+			<pre class="code-snippet display-off" id="sass-10"><code>
 .btn {
 	background-color: $c-grey-1;
 	font-size: $font-s;
@@ -809,17 +809,17 @@
 		<button class="btn btn-flat-danger btn-large">Button Large</button>
 		<button class="btn btn-flat-danger">Button Default</button>
 		<button class="btn btn-flat-danger btn-small">Button Small</button>
-		<section class="code-preview">
+		<section class="code-preview has-tab">
 			<div class="card uh-tab">
 				<nav class="uh-tab-nav">
 					<a  class="nav-item nav-fit-content active" href="#html-11" id="html-tab">HTML</a>
 					<a  class="nav-item nav-fit-content" href="#sass-11" id="sass-tab">SASS</a>
 				</nav>
 			</div>
-			<pre class="code-snippet display-on" id="html-11"><code>&lt;button class=&quot;btn btn-flat-danger btn-large&quot;&gt;Button Large&lt;/button&gt;
+			<pre class="code-snippet" id="html-11"><code>&lt;button class=&quot;btn btn-flat-danger btn-large&quot;&gt;Button Large&lt;/button&gt;
 &lt;button class=&quot;btn btn-flat-danger&quot;&gt;Button Default&lt;/button&gt;
 &lt;button class=&quot;btn btn-flat-danger btn-small&quot;&gt;Button Small&lt;/button&gt;</code></pre>
-			<pre class="code-snippet" id="sass-11"><code>
+			<pre class="code-snippet display-off" id="sass-11"><code>
 .btn {
 	background-color: $c-grey-1;
 	font-size: $font-s;
@@ -880,17 +880,17 @@
 		<button class="btn btn-flat-prime btn-large">Button Large</button>
 		<button class="btn btn-flat-prime">Button Default</button>
 		<button class="btn btn-flat-prime btn-small">Button Small</button>
-		<section class="code-preview">
+		<section class="code-preview has-tab">
 			<div class="card uh-tab">
 				<nav class="uh-tab-nav">
 					<a  class="nav-item nav-fit-content active" href="#html-12" id="html-tab">HTML</a>
 					<a  class="nav-item nav-fit-content" href="#sass-12" id="sass-tab">SASS</a>
 				</nav>
 			</div>
-			<pre class="code-snippet display-on" id="html-12"><code>&lt;button class=&quot;btn btn-flat-prime btn-large&quot;&gt;Button Large&lt;/button&gt;
+			<pre class="code-snippet" id="html-12"><code>&lt;button class=&quot;btn btn-flat-prime btn-large&quot;&gt;Button Large&lt;/button&gt;
 &lt;button class=&quot;btn btn-flat-prime&quot;&gt;Button Default&lt;/button&gt;
 &lt;button class=&quot;btn btn-flat-prime btn-small&quot;&gt;Button Small&lt;/button&gt;</code></pre>
-			<pre class="code-snippet" id="sass-12"><code>
+			<pre class="code-snippet display-off" id="sass-12"><code>
 .btn {
 	background-color: $c-grey-1;
 	font-size: $font-s;
@@ -951,17 +951,17 @@
 		<button class="btn btn-flat-grey btn-large">Button Large</button>
 		<button class="btn btn-flat-grey">Button Default</button>
 		<button class="btn btn-flat-grey btn-small">Button Small</button>
-		<section class="code-preview">
+		<section class="code-preview has-tab">
 			<div class="card uh-tab">
 				<nav class="uh-tab-nav">
 					<a  class="nav-item nav-fit-content active" href="#html-13" id="html-tab">HTML</a>
 					<a  class="nav-item nav-fit-content" href="#sass-13" id="sass-tab">SASS</a>
 				</nav>
 			</div>
-			<pre class="code-snippet display-on" id="html-13"><code>&lt;button class=&quot;btn btn-flat-grey btn-large&quot;&gt;Button Large&lt;/button&gt;
+			<pre class="code-snippet" id="html-13"><code>&lt;button class=&quot;btn btn-flat-grey btn-large&quot;&gt;Button Large&lt;/button&gt;
 &lt;button class=&quot;btn btn-flat-grey&quot;&gt;Button Default&lt;/button&gt;
 &lt;button class=&quot;btn btn-flat-grey btn-small&quot;&gt;Button Small&lt;/button&gt;</code></pre>
-			<pre class="code-snippet" id="sass-13"><code>
+			<pre class="code-snippet display-off" id="sass-13"><code>
 .btn {
 	background-color: $c-grey-1;
 	font-size: $font-s;
@@ -1023,17 +1023,17 @@
 		<a href="#!" class="btn btn-median">Button link</a>
 		<button class="btn btn-median">Button type</button>
 		<input type="submit" class="btn btn-median" name="" value="Button submit">
-		<section class="code-preview">
+		<section class="code-preview has-tab">
 			<div class="card uh-tab">
 				<nav class="uh-tab-nav">
 					<a  class="nav-item nav-fit-content active" href="#html-14" id="html-tab">HTML</a>
 					<a  class="nav-item nav-fit-content" href="#sass-14" id="sass-tab">SASS</a>
 				</nav>
 			</div>
-			<pre class="code-snippet display-on" id="html-14"><code>&lt;a href=&quot;#!&quot; class=&quot;btn btn-median&quot;&gt;Button link&lt;/a&gt;
+			<pre class="code-snippet" id="html-14"><code>&lt;a href=&quot;#!&quot; class=&quot;btn btn-median&quot;&gt;Button link&lt;/a&gt;
 &lt;button class=&quot;btn btn-median&quot;&gt;Button type&lt;/button&gt;
 &lt;input type=&quot;submit&quot; class=&quot;btn btn-median&quot; name=&quot;&quot; value=&quot;Button submit&quot;&gt;</code></pre>
-			<pre class="code-snippet" id="sass-14"><code>
+			<pre class="code-snippet display-off" id="sass-14"><code>
 .btn {
 	background-color: $c-grey-1;
 	font-size: $font-s;
@@ -1096,16 +1096,16 @@
 			<li><a href="" class="link">Link Primary</a></li>
 			<li><a href="" class="link is-grey">Link Secondary</a></li>
 		</ul>
-		<section class="code-preview">
+		<section class="code-preview has-tab">
 			<div class="card uh-tab">
 				<nav class="uh-tab-nav">
 					<a  class="nav-item nav-fit-content active" href="#html-15" id="html-tab">HTML</a>
 					<a  class="nav-item nav-fit-content" href="#sass-15" id="sass-tab">SASS</a>
 				</nav>
 			</div>
-			<pre class="code-snippet display-on" id="html-15"><code>&lt;a href=&quot;&quot; class=&quot;link&quot;&gt;Link Primary&lt;/a&gt;
+			<pre class="code-snippet" id="html-15"><code>&lt;a href=&quot;&quot; class=&quot;link&quot;&gt;Link Primary&lt;/a&gt;
 &lt;a href=&quot;&quot; class=&quot;link is-grey&quot;&gt;Link Secondary&lt;/a&gt;</code></pre>
-			<pre class="code-snippet" id="sass-15"><code>
+			<pre class="code-snippet display-off" id="sass-15"><code>
 .link {
 	text-decoration: underline;
 	color: $c-median-1;
