--- a/urbanstory/pages/components/pagination.html
+++ b/urbanstory/pages/components/pagination.html
@@ -39,14 +39,14 @@
                 <a href="#"><i class="icon-angle-right"></i></a>
             </nav>
         </div>
-        <section class="code-preview">
+        <section class="code-preview has-tab">
             <div class="card uh-tab">
                 <nav class="uh-tab-nav">
                     <a  class="nav-item nav-fit-content active" href="#html-1" id="html-tab">HTML</a>
                     <a  class="nav-item nav-fit-content" href="#sass-1" id="sass-tab">SASS</a>
                 </nav>
             </div>
-            <pre class="code-snippet display-on" id="html-1"><code>&lt;nav class=&quot;pagination&quot;&gt;
+            <pre class="code-snippet" id="html-1"><code>&lt;nav class=&quot;pagination&quot;&gt;
     &lt;a href=&quot;#&quot;&gt;&lt;i class=&quot;icon-angle-left&quot;&gt;&lt;/i&gt;&lt;/a&gt;
     &lt;a href=&quot;#&quot;&gt;1&lt;/a&gt;
     &lt;a href=&quot;#&quot; class=&quot;active&quot;&gt;2&lt;/a&gt;
@@ -55,7 +55,7 @@
     &lt;a href=&quot;#&quot;&gt;5&lt;/a&gt;
     &lt;a href=&quot;#&quot;&gt;&lt;i class=&quot;icon-angle-right&quot;&gt;&lt;/i&gt;&lt;/a&gt;
 &lt;/nav&gt;</code></pre>
-            <pre class="code-snippet" id="sass-1"><code>
+            <pre class="code-snippet display-off" id="sass-1"><code>
 .pagination {
     display: inline-block;
     height: $c-height;
