--- a/urbanstory/pages/components/steps.html
+++ b/urbanstory/pages/components/steps.html
@@ -22,14 +22,14 @@
                 <p>Promotional Advertising Specialty You Ve Waited Long Enough</p>
             </a>
         </div>
-        <section class="code-preview">
+        <section class="code-preview has-tab">
             <div class="card uh-tab">
                 <nav class="uh-tab-nav">
                     <a  class="nav-item nav-fit-content active" href="#html-1" id="html-tab">HTML</a>
                     <a  class="nav-item nav-fit-content" href="#sass-1" id="sass-tab">SASS</a>
                 </nav>
             </div>
-            <pre class="code-snippet display-on" id="html-1"><code>&lt;div class=&quot;steps-block&quot;&gt;
+            <pre class="code-snippet" id="html-1"><code>&lt;div class=&quot;steps-block&quot;&gt;
     &lt;a href=&quot;#&quot; class=&quot;step-item col-xs-3&quot;&gt;
         &lt;h4&gt;Step 1&lt;/h4&gt;
         &lt;p&gt;Promotional Advertising Specialty You Ve Waited Long Enough&lt;/p&gt;
@@ -48,7 +48,7 @@
     &lt;/a&gt;
 &lt;/div&gt;
             </code></pre>
-            <pre class="code-snippet" id="sass-1"><code>
+            <pre class="code-snippet display-off" id="sass-1"><code>
 .steps-block {
     display: inline-flex;
     width: 100%;
@@ -98,14 +98,14 @@
             </div>
             <div class="step-counter"><span>64%</span></div>
         </div>
-        <section class="code-preview">
+        <section class="code-preview has-tab">
             <div class="card uh-tab">
                 <nav class="uh-tab-nav">
                     <a  class="nav-item nav-fit-content active" href="#html-2" id="html-tab">HTML</a>
                     <a  class="nav-item nav-fit-content" href="#sass-2" id="sass-tab">SASS</a>
                 </nav>
             </div>
-            <pre class="code-snippet display-on" id="html-2"><code>&lt;div class=&quot;steps-progress&quot;&gt;
+            <pre class="code-snippet" id="html-2"><code>&lt;div class=&quot;steps-progress&quot;&gt;
     &lt;div class=&quot;progress&quot;&gt;
         &lt;div style=&quot;width:64%;&quot;&gt;&lt;/div&gt;
     &lt;/div&gt;
@@ -123,7 +123,7 @@
     &lt;div class=&quot;step-counter&quot;&gt;&lt;span&gt;64%&lt;/span&gt;&lt;/div&gt;
 &lt;/div&gt;
             </code></pre>
-            <pre class="code-snippet" id="sass-2"><code>
+            <pre class="code-snippet display-off" id="sass-2"><code>
 $counter-width: 44px;
 .steps-progress {
     width: 100%;
@@ -211,14 +211,14 @@ $counter-width: 44px;
             </div>
             <div class="step-counter"><span>64%</span></div>
         </div>
-        <section class="code-preview">
+        <section class="code-preview has-tab">
             <div class="card uh-tab">
                 <nav class="uh-tab-nav">
                     <a  class="nav-item nav-fit-content active" href="#html-3" id="html-tab">HTML</a>
                     <a  class="nav-item nav-fit-content" href="#sass-3" id="sass-tab">SASS</a>
                 </nav>
             </div>
-            <pre class="code-snippet display-on" id="html-3"><code>&lt;div class=&quot;steps-progress&quot;&gt;
+            <pre class="code-snippet" id="html-3"><code>&lt;div class=&quot;steps-progress&quot;&gt;
     &lt;div class=&quot;progress&quot;&gt;
         &lt;div style=&quot;width:64%;&quot;&gt;&lt;/div&gt;
     &lt;/div&gt;
@@ -236,7 +236,7 @@ $counter-width: 44px;
     &lt;div class=&quot;step-counter&quot;&gt;&lt;span&gt;64%&lt;/span&gt;&lt;/div&gt;
 &lt;/div&gt;
             </code></pre>
-            <pre class="code-snippet" id="sass-3"><code>
+            <pre class="code-snippet display-off" id="sass-3"><code>
 $counter-width: 44px;
 .steps-progress {
     width: 100%;
@@ -332,14 +332,14 @@ $counter-width: 44px;
                 </div>
             </a>
         </div>
-        <section class="code-preview">
+        <section class="code-preview has-tab">
             <div class="card uh-tab">
                 <nav class="uh-tab-nav">
                     <a  class="nav-item nav-fit-content active" href="#html-4" id="html-tab">HTML</a>
                     <a  class="nav-item nav-fit-content" href="#sass-4" id="sass-tab">SASS</a>
                 </nav>
             </div>
-            <pre class="code-snippet display-on" id="html-4"><code>&lt;div class=&quot;row steps-points&quot;&gt;
+            <pre class="code-snippet" id="html-4"><code>&lt;div class=&quot;row steps-points&quot;&gt;
     &lt;a href=&quot;#&quot; class=&quot;step-item col-xs-4 is-active&quot;&gt;
         &lt;div class=&quot;step-point&quot;&gt;&lt;span&gt;1&lt;/span&gt;&lt;/div&gt;
         &lt;div class=&quot;step-content&quot;&gt;
@@ -363,7 +363,7 @@ $counter-width: 44px;
     &lt;/a&gt;
 &lt;/div&gt;
             </code></pre>
-            <pre class="code-snippet" id="sass-4"><code>
+            <pre class="code-snippet display-off" id="sass-4"><code>
 $step-point-width: 180px;
 .steps-points {
     position: relative;
@@ -466,14 +466,14 @@ $step-point-width: 180px;
                 </div>
             </a>
         </div>
-        <section class="code-preview">
+        <section class="code-preview has-tab">
             <div class="card uh-tab">
                 <nav class="uh-tab-nav">
                     <a  class="nav-item nav-fit-content active" href="#html-5" id="html-tab">HTML</a>
                     <a  class="nav-item nav-fit-content" href="#sass-5" id="sass-tab">SASS</a>
                 </nav>
             </div>
-            <pre class="code-snippet display-on" id="html-5"><code>&lt;div class=&quot;row steps-points&quot;&gt;
+            <pre class="code-snippet" id="html-5"><code>&lt;div class=&quot;row steps-points&quot;&gt;
     &lt;a class=&quot;step-item col-xs-4 is-active is-done&quot;&gt;
         &lt;div class=&quot;step-point&quot;&gt;&lt;span&gt;&lt;i class=&quot;icon-check&quot;&gt;&lt;/i&gt;&lt;/span&gt;&lt;/div&gt;
         &lt;div class=&quot;step-content&quot;&gt;
@@ -497,7 +497,7 @@ $step-point-width: 180px;
     &lt;/a&gt;
 &lt;/div&gt;
             </code></pre>
-            <pre  class="code-snippet" id="sass-5"><code>
+            <pre  class="code-snippet display-off" id="sass-5"><code>
 $step-point-width: 180px;
 .steps-points {
     position: relative;
