--- a/urbanstory/pages/components/alert.html
+++ b/urbanstory/pages/components/alert.html
@@ -12,19 +12,19 @@
 			communication.
 			<button class="btn btn-flat btn-small alert-close"><i class="icon-close"></i></button>
 		</div>
-		<section class="code-preview">
+		<section class="code-preview has-tab">
 			<div class="card uh-tab">
 				<nav class="uh-tab-nav">
 					<a  class="nav-item nav-fit-content active" href="#html-1" id="html-tab">HTML</a>
 					<a  class="nav-item nav-fit-content" href="#sass-1" id="sass-tab">SASS</a>
 				</nav>
 			</div>
-			<pre class="code-snippet display-on" id="html-1"><code>&lt;div class=&quot;alert&quot;&gt;
+			<pre class="code-snippet" id="html-1"><code>&lt;div class=&quot;alert&quot;&gt;
 	&lt;h4&gt;Alert &lt;small&gt;(Default)&lt;/small&gt;&lt;/h4&gt;
 	Most people learn to talk when they are relatively young. Gaining in verbal capacity as the get older and engage in conversation with more and more people throughout their lives. And while most people will spend their time constantly speaking, some never really learn to listen, which is the king of effective communication.
 	&lt;button class=&quot;btn btn-flat btn-small alert-close&quot;&gt;&lt;i class=&quot;icon-close&quot;&gt;&lt;/i&gt;&lt;/button&gt;
 &lt;/div&gt;</code></pre>
-			<pre class="code-snippet" id="sass-1"><code>
+			<pre class="code-snippet display-off" id="sass-1"><code>
 	.alert {
 		//@extend .card;
 		@extend .padd-l;
@@ -68,19 +68,19 @@
 			communication.
 			<button class="btn btn-flat btn-small alert-close"><i class="icon-close"></i></button>
 		</div>
-		<section class="code-preview">
+		<section class="code-preview has-tab">
 			<div class="card uh-tab">
 				<nav class="uh-tab-nav">
 					<a class="nav-item nav-fit-content active" href="#html-2" id="html-tab">HTML</a>
 					<a class="nav-item nav-fit-content" href="#sass-2" id="sass-tab">SASS</a>
 				</nav>
 			</div>
-			<pre class="code-snippet display-on" id="html-2"><code>&lt;div class=&quot;alert is-danger&quot;&gt;
+			<pre class="code-snippet" id="html-2"><code>&lt;div class=&quot;alert is-danger&quot;&gt;
 		&lt;h4&gt;Alert &lt;small&gt;(Default)&lt;/small&gt;&lt;/h4&gt;
 		Most people learn to talk when they are relatively young. Gaining in verbal capacity as the get older and engage in conversation with more and more people throughout their lives. And while most people will spend their time constantly speaking, some never really learn to listen, which is the king of effective communication.
 		&lt;button class=&quot;btn btn-flat btn-small alert-close&quot;&gt;&lt;i class=&quot;icon-close&quot;&gt;&lt;/i&gt;&lt;/button&gt;
 	&lt;/div&gt;</code></pre>
-			<pre class="code-snippet" id="sass-2"><code>
+			<pre class="code-snippet display-off" id="sass-2"><code>
 	.alert {
 		//@extend .card;
 		@extend .padd-l;
@@ -132,19 +132,19 @@
 			communication.
 			<button class="btn btn-flat btn-small alert-close"><i class="icon-close"></i></button>
 		</div>
-		<section class="code-preview">
+		<section class="code-preview has-tab">
 			<div class="card uh-tab">
 				<nav class="uh-tab-nav">
 					<a class="nav-item nav-fit-content active" href="#html-3" id="html-tab">HTML</a>
 					<a class="nav-item nav-fit-content" href="#sass-3" id="sass-tab">SASS</a>
 				</nav>
 			</div>
-			<pre class="code-snippet display-on" id="html-3"><code>&lt;div class=&quot;alert is-success&quot;&gt;
+			<pre class="code-snippet" id="html-3"><code>&lt;div class=&quot;alert is-success&quot;&gt;
 		&lt;h4&gt;Alert &lt;small&gt;(Default)&lt;/small&gt;&lt;/h4&gt;
 		Most people learn to talk when they are relatively young. Gaining in verbal capacity as the get older and engage in conversation with more and more people throughout their lives. And while most people will spend their time constantly speaking, some never really learn to listen, which is the king of effective communication.
 		&lt;button class=&quot;btn btn-flat btn-small alert-close&quot;&gt;&lt;i class=&quot;icon-close&quot;&gt;&lt;/i&gt;&lt;/button&gt;
 	&lt;/div&gt;</code></pre>
-			<pre class="code-snippet" id="sass-3"><code>
+			<pre class="code-snippet display-off" id="sass-3"><code>
 	.alert {
 		//@extend .card;
 		@extend .padd-l;
@@ -195,19 +195,19 @@
 			communication.
 			<button class="btn btn-flat btn-small alert-close"><i class="icon-close"></i></button>
 		</div>
-		<section class="code-preview">
+		<section class="code-preview has-tab">
 			<div class="card uh-tab">
 				<nav class="uh-tab-nav">
 					<a  class="nav-item nav-fit-content active" href="#html-4" id="html-tab">HTML</a>
 					<a  class="nav-item nav-fit-content" href="#sass-4" id="sass-tab">SASS</a>
 				</nav>
 			</div>
-			<pre class="code-snippet display-on" id="html-4"><code>&lt;div class=&quot;alert is-info&quot;&gt;
+			<pre class="code-snippet" id="html-4"><code>&lt;div class=&quot;alert is-info&quot;&gt;
 		&lt;h4&gt;Alert &lt;small&gt;(Default)&lt;/small&gt;&lt;/h4&gt;
 		Most people learn to talk when they are relatively young. Gaining in verbal capacity as the get older and engage in conversation with more and more people throughout their lives. And while most people will spend their time constantly speaking, some never really learn to listen, which is the king of effective communication.
 		&lt;button class=&quot;btn btn-flat btn-small alert-close&quot;&gt;&lt;i class=&quot;icon-close&quot;&gt;&lt;/i&gt;&lt;/button&gt;
 	&lt;/div&gt;</code></pre>
-			<pre class="code-snippet" id="sass-4"><code>
+			<pre class="code-snippet display-off" id="sass-4"><code>
 	.alert {
 		//@extend .card;
 		@extend .padd-l;
@@ -261,20 +261,20 @@
 			communication.
 			<button class="btn btn-flat btn-small alert-close"><i class="icon-close"></i></button>
 		</div>
-		<section class="code-preview">
+		<section class="code-preview has-tab">
 			<div class="card uh-tab">
 				<nav class="uh-tab-nav">
 					<a  class="nav-item nav-fit-content active" href="#html-5" id="html-tab">HTML</a>
 					<a  class="nav-item nav-fit-content" href="#sass-5" id="sass-tab">SASS</a>
 				</nav>
 			</div>
-			<pre class="code-snippet display-on" id="html-5"><code>&lt;div class=&quot;alert has-img is-danger&quot;&gt;
+			<pre class="code-snippet" id="html-5"><code>&lt;div class=&quot;alert has-img is-danger&quot;&gt;
 		&lt;img src=&quot;https://www.rhinocarhire.com/CorporateSite/media/Drive-Smart/Dash-Symbols/warning_symbol_in_red.png&quot;&gt;
 		&lt;h3&gt;Warning&lt;/h3&gt;
 		Most people learn to talk when they are relatively young. Gaining in verbal capacity as the get older and engage in conversation with more and more people throughout their lives. And while most people will spend their time constantly speaking, some never really learn to listen, which is the king of effective communication.
 		&lt;button class=&quot;btn btn-flat btn-small alert-close&quot;&gt;&lt;i class=&quot;icon-close&quot;&gt;&lt;/i&gt;&lt;/button&gt;
 	&lt;/div&gt;</code></pre>
-			<pre class="code-snippet" id="sass-5"><code>
+			<pre class="code-snippet display-off" id="sass-5"><code>
 	.alert {
 		//@extend .card;
 		@extend .padd-l;
