--- a/urbanstory/pages/components/chips.html
+++ b/urbanstory/pages/components/chips.html
@@ -30,14 +30,14 @@
                 </div>
             </div>
         </div>
-        <section class="code-preview">
+        <section class="code-preview has-tab">
 			<div class="card uh-tab">
 				<nav class="uh-tab-nav">
 					<a  class="nav-item nav-fit-content active" href="#html-1" id="html-tab">HTML</a>
 					<a  class="nav-item nav-fit-content" href="#sass-1" id="sass-tab">SASS</a>
 				</nav>
 			</div>
-            <pre class="code-snippet display-on" id="html-1"><code>&lt;div class=&quot;chip&quot;&gt;Plain chip&lt;/div&gt;
+            <pre class="code-snippet" id="html-1"><code>&lt;div class=&quot;chip&quot;&gt;Plain chip&lt;/div&gt;
 
 &lt;div class=&quot;chip&quot;&gt;Chip with icon
     &lt;button&gt;&lt;i class=&quot;icon-close&quot;&gt;&lt;/i&gt;&lt;/button&gt;
@@ -66,7 +66,7 @@
 &lt;div class=&quot;chip chip-median&quot;&gt;Chip median
     &lt;button&gt;&lt;i class=&quot;icon-close&quot;&gt;&lt;/i&gt;&lt;/button&gt;
 &lt;/div&gt;</code></pre>
-            <pre class="code-snippet" id="sass-1"><code>
+            <pre class="code-snippet display-off" id="sass-1"><code>
 .chip {
 	display: inline-flex;
 	@include flex-middle;
