--- a/urbanstory/pages/components/labels.html
+++ b/urbanstory/pages/components/labels.html
@@ -12,14 +12,14 @@
             <div class="label label-warning">Badge warning</div>
             <div class="label label-median">Badge median</div>
         </div>
-        <section class="code-preview">
+        <section class="code-preview has-tab">
 			<div class="card uh-tab">
 				<nav class="uh-tab-nav">
 					<a  class="nav-item nav-fit-content active" href="#html-1" id="html-tab">HTML</a>
 					<a  class="nav-item nav-fit-content" href="#sass-1" id="sass-tab">SASS</a>
 				</nav>
 			</div>
-            <pre class="code-snippet display-on" id="html-1"><code>&lt;div class=&quot;label&quot;&gt;Badge outlines&lt;/div&gt;
+            <pre class="code-snippet" id="html-1"><code>&lt;div class=&quot;label&quot;&gt;Badge outlines&lt;/div&gt;
 
 &lt;div class=&quot;label label-grey&quot;&gt;Badge flat grey&lt;/div&gt;
 
@@ -32,7 +32,7 @@
 &lt;div class=&quot;label label-warning&quot;&gt;Badge warning&lt;/div&gt;
 
 &lt;div class=&quot;label label-median&quot;&gt;Badgemedian&lt;/div&gt;</code></pre>
-            <pre class="code-snippet" id="sass-1"><code>
+            <pre class="code-snippet display-off" id="sass-1"><code>
 .label {
 	border: 1px solid $c-grey-3;
 	@include border-radius(10px);
