--- a/urbanstory/pages/components/list.html
+++ b/urbanstory/pages/components/list.html
@@ -21,14 +21,14 @@
             </ul>
 
         </div>
-        <section class="code-preview">
+        <section class="code-preview has-tab">
             <div class="card uh-tab">
                 <nav class="uh-tab-nav">
                     <a  class="nav-item nav-fit-content active" href="#html-1" id="html-tab">HTML</a>
                     <a  class="nav-item nav-fit-content" href="#sass-1" id="sass-tab">SASS</a>
                 </nav>
             </div>
-            <pre class="code-snippet display-on" id="html-1"><code>&lt;ul class=&quot;list has-icon&quot;&gt;
+            <pre class="code-snippet" id="html-1"><code>&lt;ul class=&quot;list has-icon&quot;&gt;
     &lt;li&gt;&lt;a href=&quot;#&quot;&gt;List item item item item ioete&lt;/a&gt;&lt;/li&gt;
     &lt;li&gt;&lt;a href=&quot;#&quot;&gt;List item 2&lt;/a&gt;&lt;/li&gt;
     &lt;li&gt;&lt;a href=&quot;#&quot;&gt;List item 3&lt;/a&gt;&lt;/li&gt;
@@ -40,7 +40,7 @@
     &lt;li&gt;&lt;a href=&quot;#&quot;&gt;List item&lt;/a&gt;&lt;/li&gt;
     &lt;li&gt;&lt;a href=&quot;#&quot;&gt;List item&lt;/a&gt;&lt;/li&gt;
 &lt;/ul&gt;</code></pre>
-            <pre class="code-snippet" id="sass-1"><code>
+            <pre class="code-snippet display-off" id="sass-1"><code>
 .list {
     color: $c-grey-5;
     list-style-type: none;
