--- a/urbanstory/pages/components/preloader.html
+++ b/urbanstory/pages/components/preloader.html
@@ -11,19 +11,19 @@
     	<button class="btn btn-firm btn-min-width"><span class="uh-loader is-white">Loading...</span></button>
     	<button class="btn btn-danger btn-min-width"><span class="uh-loader is-white">Loading...</span></button>
 	</section>
-	<section>
+	<section class="code-preview has-tab">
 		<div class="card uh-tab">
 			<nav class="uh-tab-nav">
 				<a  class="nav-item nav-fit-content active" href="#html-1" id="html-tab">HTML</a>
 				<a  class="nav-item nav-fit-content" href="#sass-1" id="sass-tab">SASS</a>
 			</nav>
 		</div>
-		<pre class="code-snippet display-on" id="html-1"><code>&lt;span class=&quot;uh-loader is-small&quot;&gt;Loading...&lt;/span&gt;
+		<pre class="code-snippet" id="html-1"><code>&lt;span class=&quot;uh-loader is-small&quot;&gt;Loading...&lt;/span&gt;
 &lt;span class=&quot;uh-loader&quot;&gt;Loading...&lt;/span&gt;
 &lt;span class=&quot;uh-loader is-large&quot;&gt;Loading...&lt;/span&gt;
 &lt;button class=&quot;btn btn-firm btn-min-width&quot;&gt;&lt;span class=&quot;uh-loader is-white&quot;&gt;Loading...&lt;/span&gt;&lt;/button&gt;
 &lt;button class=&quot;btn btn-danger btn-min-width&quot;&gt;&lt;span class=&quot;uh-loader is-white&quot;&gt;Loading...&lt;/span&gt;&lt;/button&gt;</code></pre>
-		<pre class="code-snippet" id="sass-1"><code>
+		<pre class="code-snippet display-off" id="sass-1"><code>
 .btn {
 	&.uh-loader {
 		// vertical-align: bottom;
