--- a/urbanstory/pages/components/slider.html
+++ b/urbanstory/pages/components/slider.html
@@ -16,14 +16,14 @@
             <input type="range" min="0" max="100" step="1" value="5" oninput="lowerSlide()" id="lower">
             <input type="range" min="0" max="100" step="1" value="95" oninput="upperSlide()" id="upper">
         </div>
-        <section class="code-preview">
+        <section class="code-preview has-tab">
             <div class="card uh-tab">
                 <nav class="uh-tab-nav">
                     <a  class="nav-item nav-fit-content active" href="#html-1" id="html-tab">HTML</a>
                     <a  class="nav-item nav-fit-content" href="#sass-1" id="sass-tab">SASS</a>
                 </nav>
             </div>
-            <pre class="code-snippet display-on" id="html-1"><code>&lt;div class=&quot;range-slider&quot;&gt;
+            <pre class="code-snippet" id="html-1"><code>&lt;div class=&quot;range-slider&quot;&gt;
     &lt;input type=&quot;range&quot; min=&quot;1&quot; max=&quot;100000000&quot; step=&quot;100000&quot; value=&quot;0&quot; id=&quot;slider&quot;&gt;
     &lt;/div&gt;
 
@@ -31,7 +31,7 @@
     &lt;input type=&quot;range&quot; min=&quot;0&quot; max=&quot;100&quot; step=&quot;1&quot; value=&quot;5&quot;&gt;
     &lt;input type=&quot;range&quot; min=&quot;0&quot; max=&quot;100&quot; step=&quot;1&quot; value=&quot;95&quot;&gt;
 &lt;/div&gt;</code></pre>
-            <pre class="code-snippet" id="sass-1"><code>
+            <pre class="code-snippet display-off" id="sass-1"><code>
 .range-slider {
     width: 100%;
     input[type="range"] {
