--- a/urbanstory/pages/components/switch.html
+++ b/urbanstory/pages/components/switch.html
@@ -9,53 +9,53 @@
             </button>
         </div>
     </section>
-    <section class="code-preview">
+    <section class="code-preview has-tab">
         <div class="card uh-tab">
             <nav class="uh-tab-nav">
                 <a  class="nav-item nav-fit-content active" href="#html-1" id="html-tab">HTML</a>
                 <a  class="nav-item nav-fit-content" href="#sass-1" id="sass-tab">SASS</a>
             </nav>
         </div>
-        <pre class="code-snippet display-on" id="html-1"><code>&lt;div class=&quot;uh-switch&quot;&gt;
+        <pre class="code-snippet" id="html-1"><code>&lt;div class=&quot;uh-switch&quot;&gt;
     &lt;button&gt;
-        &lt;span&gt;&lt;/span&gt;
+        &lt;span class=&quot;handle&quot;&gt;&lt;/span&gt;
     &lt;/button&gt;
 &lt;/div&gt;
         </code></pre>
-        <pre class="code-snippet" id="sass-1"><code>.uh-switch {
-            display: inline-block;
-            button {
-                cursor: pointer;
-                position: relative;
-                display: inline-block;
-                width: 40px;
-                height: 20px;
-                @include border-radius(10px);
-                border: none;
-                background: $c-grey-2;
-                outline: none;
-            }
-            span {
-                display: block;
-                position: absolute;
-                @include border-radius(50%);
-                height: 20px;
-                width: 20px;
-                background: $c-grey-4;
-                top: 0;
-                left: 0;
-                transition: left .2s;
-            }
-            &amp;.active {
-                button {
-                    background: $sc-median;
-                }
-                span {
-                    left: 20px;
-                    background: $c-median-1;
-                    transition: left .2s;
-                }
-            }
-        }</code></pre>
+        <pre class="code-snippet display-off" id="sass-1"><code>
+.uh-switch {
+    button {
+        cursor: pointer;
+        position: relative;
+        display: inline-block;
+        width: 40px;
+        height: 20px;
+        @include border-radius(10px);
+        border: none;
+        background: $c-grey-2;
+        outline: none;
+    }
+    span {
+        position: absolute;
+        @include border-radius(50%);
+        height: 20px;
+        width: 20px;
+        background: $c-grey-4;
+        top: 0;
+        left: 0;
+        transition: left .2s;
+    }
+    &.active{
+        button{
+            background: $sc-median;
+        }
+        span{
+            left: 20px;
+            background: $c-median-1;
+            transition: left .2s;
+        }
+    }  
+}
+        </code></pre>
     </section>
 </div>
