--- a/urbanstory/pages/components/tab.html
+++ b/urbanstory/pages/components/tab.html
@@ -13,14 +13,14 @@
                 <div class="nav-item no-grow"><i class="icon-grid"></i></div>
             </nav>
         </div>
-        <section class="code-preview">
+        <section class="code-preview has-tab">
             <div class="card uh-tab">
                 <nav class="uh-tab-nav">
                     <a  class="nav-item nav-fit-content active" href="#html-1" id="html-tab">HTML</a>
                     <a  class="nav-item nav-fit-content" href="#sass-1" id="sass-tab">SASS</a>
                 </nav>
             </div>
-             <pre class="code-snippet display-on" id="html-1"><code>&lt;div class=&quot;card uh-tab&quot;&gt;
+             <pre class="code-snippet" id="html-1"><code>&lt;div class=&quot;card uh-tab&quot;&gt;
     &lt;nav class=&quot;uh-tab-nav&quot;&gt;
         &lt;div class=&quot;nav-item active&quot;&gt;TAB 1&lt;/div&gt;
         &lt;div class=&quot;nav-item&quot;&gt;TAB 2&lt;/div&gt;
@@ -29,7 +29,7 @@
         &lt;div class=&quot;nav-item no-grow&quot;&gt;TAB 5&lt;/div&gt;
     &lt;/nav&gt;
 &lt;/div&gt;</code></pre>
-            <pre class="code-snippet" id="sass-1"><code>.uh-tab {
+            <pre class="code-snippet display-off" id="sass-1"><code>.uh-tab {
     background: $c-bg-color;
     @include box-shadow($card-box-shadow);
     display: block;
