--- a/urbanstory/pages/components/toast.html
+++ b/urbanstory/pages/components/toast.html
@@ -28,14 +28,14 @@
 			<p>Toast sample</p>
 			<button class="btn btn-flat btn-small toast-close"><i class="icon-close"></i></button>
 		</div>
-		<section class="code-preview">
+		<section class="code-preview has-tab">
 			<div class="card uh-tab">
 				<nav class="uh-tab-nav">
 					<a  class="nav-item nav-fit-content active" href="#html-1" id="html-tab">HTML</a>
 					<a  class="nav-item nav-fit-content" href="#sass-1" id="sass-tab">SASS</a>
 				</nav>
 			</div>
-			<pre class="code-snippet display-on" id="html-1"><code>&lt;div class=&quot;toast&quot;&gt;
+			<pre class="code-snippet" id="html-1"><code>&lt;div class=&quot;toast&quot;&gt;
     &lt;p&gt;Toast sample&lt;/p&gt;
     &lt;button class=&quot;btn btn-flat btn-small toast-close&quot;&gt;&lt;i class=&quot;icon-close&quot;&gt;&lt;/i&gt;&lt;/button&gt;
 &lt;/div&gt;
@@ -59,7 +59,7 @@
     &lt;p&gt;Toast sample&lt;/p&gt;
     &lt;button class=&quot;btn btn-flat btn-small toast-close&quot;&gt;&lt;i class=&quot;icon-close&quot;&gt;&lt;/i&gt;&lt;/button&gt;
 &lt;/div&gt;</code></pre>
-			<pre class="code-snippet" id="sass-1"><code>
+			<pre class="code-snippet display-off" id="sass-1"><code>
 .toast {
 	// @extend .padd-l;
 	padding: 0 $gutter-l;
@@ -121,14 +121,14 @@
 		<button class="btn btn-firm-o toast-caller">Call Toast</button>
 		<div class="toast-fixed-wrapper" id="toast-fixed-content">
 		</div>
-		<section class="code-preview">
+		<section class="code-preview has-tab">
 			<div class="card uh-tab">
 				<nav class="uh-tab-nav">
 					<a  class="nav-item nav-fit-content active" href="#html-2" id="html-tab">HTML</a>
 					<a  class="nav-item nav-fit-content" href="#sass-2" id="sass-tab">SASS</a>
 				</nav>
 			</div>
-			<pre class="code-snippet display-on" id="html-2"><code>
+			<pre class="code-snippet" id="html-2"><code>
 &lt;div class=&quot;toast-fixed-wrapper&quot;&gt;
 	&lt;div class=&quot;toast is-info&quot;&gt;
 		&lt;p&gt;Fixed toast sample&lt;/p&gt;
@@ -144,7 +144,7 @@
 	&lt;/div&gt;
 &lt;/div&gt;
 			</code></pre>
-			<pre class="code-snippet" id="sass-2"><code>
+			<pre class="code-snippet display-off" id="sass-2"><code>
 .toast {
 	// @extend .padd-l;
 	padding: 0 $gutter-l;
