fixing minor changes

--- a/urbanstory/pages/components/tooltip.html
+++ b/urbanstory/pages/components/tooltip.html
@@ -250,7 +250,7 @@
         </code>
     </pre>
 
-    <button class="btn btn-firm" onclick="copyToClipboard('#texttocopy')"><i class="icon-code"></i>Copy</button>
+    <!-- <button class="btn btn-firm" onclick="copyToClipboard('#texttocopy')"><i class="icon-code"></i>Copy</button> -->
     <pre class="code-snippet display-on" id="html texttocopy">
         <!-- <button class="btn btn-firm" onclick="copyToClipboard('#texttocopyhtml')"><i class="icon-code"></i>Copy</button> -->
         <code id="texttocopyhtml">
