--- a/urbanstory/pages/components/labels.html
+++ b/urbanstory/pages/components/labels.html
@@ -4,7 +4,7 @@
     </section>
     <section>
 		<h4>Label Default <code>.label</code></h4>
-		<div class="chips-group">
+		<div class="label-group">
 			<div class="label">Plain label</div>
 			<div class="label label-outlined">Label outlines</div>
             <div class="label label-grey">Label flat grey</div>
@@ -40,105 +40,151 @@
 					<a  class="nav-item nav-fit-content" href="#sass-1" id="sass-tab">SASS</a>
 				</nav>
 			</div>
-			<pre class="code-snippet" id="html-1"><code>&lt;div class=&quot;chip&quot;&gt;Plain chip&lt;/div&gt;
-	
-&lt;div class=&quot;chip&quot;&gt;Chip with icon
-	&lt;button&gt;&lt;i class=&quot;icon-close&quot;&gt;&lt;/i&gt;&lt;/button&gt;
+			<pre class="code-snippet" id="html-1"><code>&lt;div class=&quot;label&quot;&gt;Plain label&lt;/div&gt;
+
+&lt;div class=&quot;label label-outlined&quot;&gt;Label outlines&lt;/div&gt;
+
+&lt;div class=&quot;label label-grey&quot;&gt;Label flat grey&lt;/div&gt;
+
+&lt;div class=&quot;label&quot;&gt;Label with icon
+  &lt;button&gt;&lt;i class=&quot;icon-close&quot;&gt;&lt;/i&gt;&lt;/button&gt;
 &lt;/div&gt;
 
-&lt;div class=&quot;chip chip-dashed&quot;&gt;Chip dashed
-	&lt;button&gt;&lt;i class=&quot;icon-plus&quot;&gt;&lt;/i&gt;&lt;/button&gt;
+&lt;div class=&quot;label label-dashed&quot;&gt;Label dashed
+  &lt;button&gt;&lt;i class=&quot;icon-plus&quot;&gt;&lt;/i&gt;&lt;/button&gt;
 &lt;/div&gt;
 
-&lt;div class=&quot;chip chip-firm&quot;&gt;Chip firm
-	&lt;button&gt;&lt;i class=&quot;icon-close&quot;&gt;&lt;/i&gt;&lt;/button&gt;
+&lt;div class=&quot;label label-sub-firm&quot;&gt;Label sub-firm
+  &lt;button&gt;&lt;i class=&quot;icon-close&quot;&gt;&lt;/i&gt;&lt;/button&gt;
 &lt;/div&gt;
 
-&lt;div class=&quot;chip chip-success&quot;&gt;Chip success
-	&lt;button&gt;&lt;i class=&quot;icon-close&quot;&gt;&lt;/i&gt;&lt;/button&gt;
+&lt;div class=&quot;label label-firm&quot;&gt;Label firm
+  &lt;button&gt;&lt;i class=&quot;icon-close&quot;&gt;&lt;/i&gt;&lt;/button&gt;
 &lt;/div&gt;
 
-&lt;div class=&quot;chip chip-danger&quot;&gt;Chip danger
-	&lt;button&gt;&lt;i class=&quot;icon-close&quot;&gt;&lt;/i&gt;&lt;/button&gt;
+&lt;div class=&quot;label label-success&quot;&gt;Label success
+  &lt;button&gt;&lt;i class=&quot;icon-close&quot;&gt;&lt;/i&gt;&lt;/button&gt;
 &lt;/div&gt;
 
-&lt;div class=&quot;chip chip-warning&quot;&gt;Chip warning
-	&lt;button&gt;&lt;i class=&quot;icon-close&quot;&gt;&lt;/i&gt;&lt;/button&gt;
+&lt;div class=&quot;label label-danger&quot;&gt;Label danger
+  &lt;button&gt;&lt;i class=&quot;icon-close&quot;&gt;&lt;/i&gt;&lt;/button&gt;
 &lt;/div&gt;
 
-&lt;div class=&quot;chip chip-median&quot;&gt;Chip median
-	&lt;button&gt;&lt;i class=&quot;icon-close&quot;&gt;&lt;/i&gt;&lt;/button&gt;
+&lt;div class=&quot;label label-warning&quot;&gt;Label warning
+  &lt;button&gt;&lt;i class=&quot;icon-close&quot;&gt;&lt;/i&gt;&lt;/button&gt;
+&lt;/div&gt;
+
+&lt;div class=&quot;label label-median&quot;&gt;Label median
+  &lt;button&gt;&lt;i class=&quot;icon-close&quot;&gt;&lt;/i&gt;&lt;/button&gt;
 &lt;/div&gt;</code></pre>
-			<pre class="code-snippet display-off" id="sass-1"><code>
-	.chip {
-		display: inline-flex;
-		@include flex-middle;
-		justify-content: center;
-		border-radius: $chip-height / 2;
-		background-color: $c-grey-1;
-		color: $c-grey-4;
-		font-size: 12px;
-		padding: 0 $gutter-l;
+			<pre class="code-snippet display-off" id="sass-1"><code>/* Labels */
+
+$label-height: 32px;
+
+.label {
+	height: $label-height;
+	font-size: 12px;
+	padding: 0 $gutter-l;
+}
+
+.label,
+.label-s,
+.label-xs {
+	border: 1px solid $c-grey-1;
+	display: inline-flex;
+	@include flex-middle;
+	justify-content: center;
+	border-radius: ($label-height / 2) + 1;
+	background-color: $c-grey-1;
+	color: $c-grey-4;
+	min-width: $chip-height * 2;
+	margin-right: $gutter-s;
+	margin-bottom: $gutter-m;
+	button {
+		background: none;
+		border: none;
+		width: $chip-height;
 		height: $chip-height;
-		min-width: $chip-height * 2;
-		margin-right: $gutter-s;
+		text-align: center;
+		padding: 0;
+		outline: none;
+		margin-right: -($gutter-l);
+		@include border-radius($chip-height);
+		@extend .transition;
 		i {
-			font-size: 12px;
-			color: $c-grey-4;
-		}
-		button {
-			background: none;
-			border: none;
-			width: $chip-height;
-			height: $chip-height;
-			text-align: center;
-			padding: 0;
-			outline: none;
-			margin-right: -($gutter-l);
-			@include border-radius($chip-height);
+			color: rgba(black, 0.25);
 			@extend .transition;
+			&:before {
+				vertical-align: middle;
+			}
+		}
+		&:hover {
+			cursor: pointer;
 			i {
-				color: rgba(black, 0.25);
-				@extend .transition;
-				&:before {
-					vertical-align: middle;
-				}
-			}
-			&:hover {
-				cursor: pointer;
-				i {
-					color: rgba(black, 0.4);
-				}
-			}
-			&:focus {
-				background: rgba(black, 0.1);
+				color: rgba(black, 0.4);
 			}
 		}
-		&.chip-firm {
-			background-color: rgba(39, 145, 217, 0.1);
-			color: $c-firm-1;
-		}
-		&.chip-dashed {
-			background-color: white;
-			border: 1px dashed $c-grey-5;
-		}
-		&.chip-success {
-			background: $c-green-1;
-			color: white;
-		}
-		&.chip-danger {
-			background: $c-red-1;
-			color: white;
-		}
-		&.chip-warning {
-			background: $c-yellow-1;
-			color: white;
-		}
-		&.chip-median {
-			background: $c-median-1;
-			color: white;
+		&:focus {
+			background: rgba(black, 0.1);
 		}
 	}
+}
+
+.label-outlined {
+	border: 1px solid $c-grey-3;
+	background-color: $c-white;
+	color: $c-grey-5;
+}
+
+.label-sub-firm {
+	background-color: rgba(39, 145, 217, 0.1);
+	color: $c-firm-1;
+	border: 1px solid rgba(39, 145, 217, 0);
+}
+
+.label-dashed {
+	background-color: white;
+	border: 1px dashed $c-grey-5;
+}
+
+.label-firm {
+	background-color: $c-firm-1;
+	border: 1px solid $c-firm-1;
+	color: $c-white;
+	button i {
+		color: white;
+	}
+}
+
+.label-success {
+	background-color: $c-green-1;
+	border: 1px solid $c-green-1;
+	color: $c-white;
+}
+
+.label-grey {
+	background-color: $c-grey-2;
+	border: 1px solid $c-grey-2;
+	color: $c-grey-5;
+}
+
+.label-danger {
+	background-color: $c-red-1;
+	border: 1px solid $c-red-1;
+	color: $c-white;
+}
+
+.label-warning {
+	background-color: $c-yellow-1;
+	border: 1px solid $c-yellow-1;
+	color: $c-white;
+}
+
+.label-median {
+	background-color: $c-median-1;
+	border: 1px solid $c-median-1;
+	color: $c-white;
+}
 			</code></pre>
 		</section>
 	</section>
@@ -159,66 +205,136 @@
         <section class="code-preview has-tab">
 			<div class="card uh-tab">
 				<nav class="uh-tab-nav">
-					<a  class="nav-item nav-fit-content active" href="#html-1" id="html-tab">HTML</a>
-					<a  class="nav-item nav-fit-content" href="#sass-1" id="sass-tab">SASS</a>
+					<a  class="nav-item nav-fit-content active" href="#html-2" id="html-tab">HTML</a>
+					<a  class="nav-item nav-fit-content" href="#sass-2" id="sass-tab">SASS</a>
 				</nav>
 			</div>
-            <pre class="code-snippet" id="html-1"><code>&lt;div class=&quot;label&quot;&gt;Badge outlines&lt;/div&gt;
+            <pre class="code-snippet" id="html-2"><code>&lt;div class=&quot;label-s&quot;&gt;Plain label&lt;/div&gt;
 
-&lt;div class=&quot;label label-grey&quot;&gt;Badge flat grey&lt;/div&gt;
+&lt;div class=&quot;label-s label-outlined&quot;&gt;Label outlines&lt;/div&gt;
 
-&lt;div class=&quot;label label-firm&quot;&gt;Badge prime&lt;/div&gt;
+&lt;div class=&quot;label-s label-grey&quot;&gt;Label flat grey&lt;/div&gt;
 
-&lt;div class=&quot;label label-success&quot;&gt;Badge success&lt;/div&gt;
+&lt;div class=&quot;label-s label-dashed&quot;&gt;Label dashed&lt;/div&gt;
 
-&lt;div class=&quot;label label-danger&quot;&gt;Badge danger&lt;/div&gt;
+&lt;div class=&quot;label-s label-sub-firm&quot;&gt;Label sub-firm&lt;/div&gt;
 
-&lt;div class=&quot;label label-warning&quot;&gt;Badge warning&lt;/div&gt;
+&lt;div class=&quot;label-s label-firm&quot;&gt;Label firm&lt;/div&gt;
 
-&lt;div class=&quot;label label-median&quot;&gt;Badgemedian&lt;/div&gt;</code></pre>
-            <pre class="code-snippet display-off" id="sass-1"><code>
-.label {
-	border: 1px solid $c-grey-3;
-	@include border-radius(10px);
-	color: $c-grey-5;
-	display: inline-block;
+&lt;div class=&quot;label-s label-success&quot;&gt;Label success&lt;/div&gt;
+
+&lt;div class=&quot;label-s label-danger&quot;&gt;Label danger&lt;/div&gt;
+
+&lt;div class=&quot;label-s label-warning&quot;&gt;Label warning&lt;/div&gt;
+
+&lt;div class=&quot;label-s label-median&quot;&gt;Label median&lt;/div&gt;</code></pre>
+            <pre class="code-snippet display-off" id="sass-2"><code>/* Labels */
+
+$label-s-height: 20px;
+
+.label-s {
+	height: $label-s-height;
 	font-size: 11px;
-	height: $label-height;
-	line-height: $label-height - 2;
-	min-width: $label-height * 2;
-	margin-left: $gutter-s;
 	padding: 0 $gutter-m;
-	@extend .align-center;
-	&.label-firm {
-		background-color: $c-firm-1;
-		border: 1px solid $c-firm-1;
-		color: $c-white;
+}
+
+.label,
+.label-s,
+.label-xs {
+	border: 1px solid $c-grey-1;
+	display: inline-flex;
+	@include flex-middle;
+	justify-content: center;
+	border-radius: ($label-height / 2) + 1;
+	background-color: $c-grey-1;
+	color: $c-grey-4;
+	min-width: $chip-height * 2;
+	margin-right: $gutter-s;
+	margin-bottom: $gutter-m;
+	button {
+		background: none;
+		border: none;
+		width: $chip-height;
+		height: $chip-height;
+		text-align: center;
+		padding: 0;
+		outline: none;
+		margin-right: -($gutter-l);
+		@include border-radius($chip-height);
+		@extend .transition;
+		i {
+			color: rgba(black, 0.25);
+			@extend .transition;
+			&:before {
+				vertical-align: middle;
+			}
+		}
+		&:hover {
+			cursor: pointer;
+			i {
+				color: rgba(black, 0.4);
+			}
+		}
+		&:focus {
+			background: rgba(black, 0.1);
+		}
 	}
-	&.label-success {
-		background-color: $c-green-1;
-		border: 1px solid $c-green-1;
-		color: $c-white;
+}
+
+.label-outlined {
+	border: 1px solid $c-grey-3;
+	background-color: $c-white;
+	color: $c-grey-5;
+}
+
+.label-sub-firm {
+	background-color: rgba(39, 145, 217, 0.1);
+	color: $c-firm-1;
+	border: 1px solid rgba(39, 145, 217, 0);
+}
+
+.label-dashed {
+	background-color: white;
+	border: 1px dashed $c-grey-5;
+}
+
+.label-firm {
+	background-color: $c-firm-1;
+	border: 1px solid $c-firm-1;
+	color: $c-white;
+	button i {
+		color: white;
 	}
-	&.label-grey {
-		background-color: $c-grey-2;
-		border: 1px solid $c-grey-2;
-		color: $c-grey-5;
-	}
-	&.label-danger {
-		background-color: $c-red-1;
-		border: 1px solid $c-red-1;
-		color: $c-white;
-	}
-	&.label-warning {
-		background-color: $c-yellow-1;
-		border: 1px solid $c-yellow-1;
-		color: $c-white;
-	}
-	&.label-median {
-		background-color: $c-median-1;
-		border: 1px solid $c-median-1;
-		color: $c-white;
-	}
+}
+
+.label-success {
+	background-color: $c-green-1;
+	border: 1px solid $c-green-1;
+	color: $c-white;
+}
+
+.label-grey {
+	background-color: $c-grey-2;
+	border: 1px solid $c-grey-2;
+	color: $c-grey-5;
+}
+
+.label-danger {
+	background-color: $c-red-1;
+	border: 1px solid $c-red-1;
+	color: $c-white;
+}
+
+.label-warning {
+	background-color: $c-yellow-1;
+	border: 1px solid $c-yellow-1;
+	color: $c-white;
+}
+
+.label-median {
+	background-color: $c-median-1;
+	border: 1px solid $c-median-1;
+	color: $c-white;
 }
 			</code></pre>
 		</section>
@@ -240,67 +356,137 @@
 			<section class="code-preview has-tab">
 				<div class="card uh-tab">
 					<nav class="uh-tab-nav">
-						<a  class="nav-item nav-fit-content active" href="#html-1" id="html-tab">HTML</a>
-						<a  class="nav-item nav-fit-content" href="#sass-1" id="sass-tab">SASS</a>
+						<a  class="nav-item nav-fit-content active" href="#html-3" id="html-tab">HTML</a>
+						<a  class="nav-item nav-fit-content" href="#sass-3" id="sass-tab">SASS</a>
 					</nav>
 				</div>
-				<pre class="code-snippet" id="html-1"><code>&lt;div class=&quot;label&quot;&gt;Badge outlines&lt;/div&gt;
-	
-	&lt;div class=&quot;label label-grey&quot;&gt;Badge flat grey&lt;/div&gt;
-	
-	&lt;div class=&quot;label label-firm&quot;&gt;Badge prime&lt;/div&gt;
-	
-	&lt;div class=&quot;label label-success&quot;&gt;Badge success&lt;/div&gt;
-	
-	&lt;div class=&quot;label label-danger&quot;&gt;Badge danger&lt;/div&gt;
-	
-	&lt;div class=&quot;label label-warning&quot;&gt;Badge warning&lt;/div&gt;
-	
-	&lt;div class=&quot;label label-median&quot;&gt;Badgemedian&lt;/div&gt;</code></pre>
-				<pre class="code-snippet display-off" id="sass-1"><code>
-	.label {
-		border: 1px solid $c-grey-3;
-		@include border-radius(10px);
-		color: $c-grey-5;
-		display: inline-block;
-		font-size: 11px;
-		height: $label-height;
-		line-height: $label-height - 2;
-		min-width: $label-height * 2;
-		margin-left: $gutter-s;
-		padding: 0 $gutter-m;
-		@extend .align-center;
-		&.label-firm {
-			background-color: $c-firm-1;
-			border: 1px solid $c-firm-1;
-			color: $c-white;
+				<pre class="code-snippet" id="html-3"><code>&lt;div class=&quot;label-xs&quot;&gt;Plain label&lt;/div&gt;
+
+&lt;div class=&quot;label-xs label-outlined&quot;&gt;Label outlines&lt;/div&gt;
+
+&lt;div class=&quot;label-xs label-grey&quot;&gt;Label flat grey&lt;/div&gt;
+
+&lt;div class=&quot;label-xs label-dashed&quot;&gt;Label dashed&lt;/div&gt;
+
+&lt;div class=&quot;label-xs label-sub-firm&quot;&gt;Label sub-firm&lt;/div&gt;
+
+&lt;div class=&quot;label-xs label-firm&quot;&gt;Label firm&lt;/div&gt;
+
+&lt;div class=&quot;label-xs label-success&quot;&gt;Label success&lt;/div&gt;
+
+&lt;div class=&quot;label-xs label-danger&quot;&gt;Label danger&lt;/div&gt;
+
+&lt;div class=&quot;label-xs label-warning&quot;&gt;Label warning&lt;/div&gt;
+
+&lt;div class=&quot;label-xs label-median&quot;&gt;Label median&lt;/div&gt;</code></pre>
+				<pre class="code-snippet display-off" id="sass-3"><code>/* Labels */
+
+$label-xs-height: 16px;
+
+.label-xs {
+	height: $label-xs-height;
+	font-size: 10px;
+	padding: 0 $gutter-s;
+}
+
+.label,
+.label-s,
+.label-xs {
+	border: 1px solid $c-grey-1;
+	display: inline-flex;
+	@include flex-middle;
+	justify-content: center;
+	border-radius: ($label-height / 2) + 1;
+	background-color: $c-grey-1;
+	color: $c-grey-4;
+	min-width: $chip-height * 2;
+	margin-right: $gutter-s;
+	margin-bottom: $gutter-m;
+	button {
+		background: none;
+		border: none;
+		width: $chip-height;
+		height: $chip-height;
+		text-align: center;
+		padding: 0;
+		outline: none;
+		margin-right: -($gutter-l);
+		@include border-radius($chip-height);
+		@extend .transition;
+		i {
+			color: rgba(black, 0.25);
+			@extend .transition;
+			&:before {
+				vertical-align: middle;
+			}
 		}
-		&.label-success {
-			background-color: $c-green-1;
-			border: 1px solid $c-green-1;
-			color: $c-white;
+		&:hover {
+			cursor: pointer;
+			i {
+				color: rgba(black, 0.4);
+			}
 		}
-		&.label-grey {
-			background-color: $c-grey-2;
-			border: 1px solid $c-grey-2;
-			color: $c-grey-5;
-		}
-		&.label-danger {
-			background-color: $c-red-1;
-			border: 1px solid $c-red-1;
-			color: $c-white;
-		}
-		&.label-warning {
-			background-color: $c-yellow-1;
-			border: 1px solid $c-yellow-1;
-			color: $c-white;
-		}
-		&.label-median {
-			background-color: $c-median-1;
-			border: 1px solid $c-median-1;
-			color: $c-white;
+		&:focus {
+			background: rgba(black, 0.1);
 		}
 	}
+}
+
+.label-outlined {
+	border: 1px solid $c-grey-3;
+	background-color: $c-white;
+	color: $c-grey-5;
+}
+
+.label-sub-firm {
+	background-color: rgba(39, 145, 217, 0.1);
+	color: $c-firm-1;
+	border: 1px solid rgba(39, 145, 217, 0);
+}
+
+.label-dashed {
+	background-color: white;
+	border: 1px dashed $c-grey-5;
+}
+
+.label-firm {
+	background-color: $c-firm-1;
+	border: 1px solid $c-firm-1;
+	color: $c-white;
+	button i {
+		color: white;
+	}
+}
+
+.label-success {
+	background-color: $c-green-1;
+	border: 1px solid $c-green-1;
+	color: $c-white;
+}
+
+.label-grey {
+	background-color: $c-grey-2;
+	border: 1px solid $c-grey-2;
+	color: $c-grey-5;
+}
+
+.label-danger {
+	background-color: $c-red-1;
+	border: 1px solid $c-red-1;
+	color: $c-white;
+}
+
+.label-warning {
+	background-color: $c-yellow-1;
+	border: 1px solid $c-yellow-1;
+	color: $c-white;
+}
+
+.label-median {
+	background-color: $c-median-1;
+	border: 1px solid $c-median-1;
+	color: $c-white;
+}
 				</code></pre>
 			</section>
 		</section>
